# urirun-widgets

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ci/: check_render_single_source.py  render_baseline.json
demo/: artifact-grid.html  attachment.html  chat-message.html  dashboard.html  form.html  generic.html  graph.html  iframe.html  image.html  index.html  scanner-status.html  scanner-stream.html  serve.py  table.html  twin-monitor.html  twin.html  video.html  widget-card.html
tests/: test_render_single_source.py  test_widgets_core.py
urirun_widgets/: __init__.py  catalog.py  connector.manifest.json  core.py  render.py
urirun_widgets/assets/: dashboard-render.js  render-helpers.js  render.js  widgets.css
urirun_widgets/assets/widgets/: artifact-grid.js  attachment.js  chat-message.js  dashboard.js  form.js  generic.js  graph.js  iframe.js  image.js  scanner-status.js  scanner-stream.js  table.js  twin.js  video.js  widget-card.js
