[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-widgets"
version = "0.1.0"
description = "Chat-stream HTML widgets for ifuri and urirun (widget://)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Tom Sapletta", email = "info@softreck.dev" }]
keywords = ["urirun", "widget", "render", "dashboard", "html", "svg", "ui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = ["urirun>=0.4.190"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/widget"
Repository = "https://github.com/if-uri/urirun-widgets"

[project.scripts]
urirun-widget = "urirun_widgets.core:main"

[project.entry-points."urirun.bindings"]
widget = "urirun_widgets.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_widgets*"]

[tool.setuptools.package-data]
urirun_widgets = ["connector.manifest.json", "assets/*.js", "assets/*.css", "assets/widgets/*.js"]
